fixing too long code block

--- a/docs/assets/style.scss
+++ b/docs/assets/style.scss
@@ -10,18 +10,15 @@ h1 {
     font-weight: 300;
     font-size: 6rem;
     text-transform: lowercase;
-    /* font-style: italic; */
     letter-spacing: -2px;
     margin: 2rem 0 40px 0;
     color: #ad6dea;
-    /* border-top:  1px solid; */
-    /* border-bottom: #430067 5px solid; */
     text-align: center;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     color: #222;
     background-color: #fff;
     margin: 0 auto;
